--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^6.0.0",
+    "@lottiefiles/dotlottie-react": "^0.17.4",
     "antd": "^5.26.2",
     "gsap": "^3.13.0",
     "react": "^18.3.1",
